<?xml version="1.0"?>
<!--
Copyright 2023 Open Source Robotics Foundation, Inc.
Copyright 2024 Leidos

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Changes from original Open Source Robotics Foundation, Inc. version:
  - replaced ament_clang_tidy with carma_ament_clang_tidy to avoid name collisions
-->
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>carma_ament_clang_tidy</name>
  <version>0.9.8</version>
  <description>
    The ability to check code against style conventions using
    clang-tidy and generate xUnit test result files.</description>
  <maintainer email="john@openrobotics.org">John Shepherd</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>clang-tidy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
