<?xml version="1.0"?>
<!--
Copyright 2023 Open Source Robotics Foundation, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Copyright 2024 Leidos

Changes:
  - replaced ament_clang_tidy with carma_ament_clang_tidy to avoid name collisions
  - replaced ament_cmake_clang_tidy with carma_ament_cmake_clang_tidy to avoid name collisions
-->
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>carma_ament_cmake_clang_tidy</name>
  <version>0.9.8</version>
  <description>
    The CMake API for carma_ament_clang_tidy to lint C / C++ code using clang tidy.
  </description>
  <maintainer email="john@openrobotics.org">John Shepherd</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>

  <buildtool_export_depend>carma_ament_clang_tidy</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
